# midi-ksp

./: Cargo.toml  LICENSE  procs.rs  readme.md
krpc/: Cargo.toml  build.rs
krpc-proto/: Cargo.toml  build.rs
krpc-proto/src/: lib.rs
krpc/src/: class.rs  connection.rs  control.rs  dump_docs.rs  lib.rs  vessel.rs
protobuf-but-worse/: Cargo.toml
protobuf-but-worse/src/: codegen.rs  encoding.rs  lib.rs
src/: axiom.rs  cache.rs  krpc.rs  lib.rs  main.rs  midi.rs
