[package]
name = "midi"
version = "0.1.0"
authors = ["Aurora <tomek-kubel2@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
minifb = "0.19.1"
ctrlc = "3.1.7"
thiserror = "1.0.23"
krpc = { path = "./krpc" }
protobuf-but-worse = { path = "../protobuf-but-worse" }
