[package]
name = "midi-ksp"
version = "0.1.0"
authors = ["Aurora <tomek-kubel2@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
ctrlc = "3.1.7"
krpc = { path = "./krpc" }
serde = "1.0.120"
bincode = "1.3.1"
