[package]
name = "ksp-midi"
version = "0.1.0"
authors = ["Aurora <tomek-kubel2@wp.pl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
ctrlc = "3.2.1"
serde = "1.0.132"
bincode = "1.3.3"
krpc = { path = "./krpc" }
axiom-midi = { path = "../axiom-midi" }
