[package]
name = "krpc"
version = "0.1.0"
authors = ["Aurora <tomek-kubel2@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { path = "../../rust-protobuf/protobuf" }

[build-dependencies]
protobuf-codegen-pure = { path = "../../rust-protobuf/protobuf-codegen-pure" }
