[package]
name = "protobuf-but-worse"
version = "0.1.0"
authors = ["Aurora <tomek-kubel2@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.3.2"
protobuf-parser = "0.1.3"
syn = { version = "1.0.58", features = ["full"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
thiserror = "1.0.23"
